--- a/EjemploASPWeb/appsettings.json
+++ b/EjemploASPWeb/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-4U48PKE\\SQLEXPRESS;Database=asp_web;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "AllowedHosts": "*"
 }
+
